Implemented Route Exchange to single target